## 2026-01-14 오전 second 1. base-href 적용

--- a/mobile/pages/app-download.html
+++ b/mobile/pages/app-download.html
@@ -2,11 +2,12 @@
 <html lang="ko">
 
 <head>
+    <base href="../../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>앱 다운로드 안내 | 이마트 에브리데이 e클럽</title>
     <!-- CSS link (Relative path to assets) -->
-    <link rel="stylesheet" href="/assets/styles/mobile.css">
+    <link rel="stylesheet" href="assets/styles/mobile.css">
 </head>
 
 <body class="mobile-body app-download-page">
@@ -47,7 +48,7 @@
         <!-- 메인 목업 영역 (Main mockup area) -->
         <main class="app-content">
             <div class="mockup-wrap">
-                <img src="/assets/images/mobile/app-download/iphone_mockup.png" alt="이클럽 앱 화면 목업" class="iphone-img">
+                <img src="assets/images/mobile/app-download/iphone_mockup.png" alt="이클럽 앱 화면 목업" class="iphone-img">
             </div>
             <div class="desc-wrap">
                 <p class="desc-text">모바일웹은 운영하지 않습니다.<br>앱을 다운로드 받아주세요.</p>
@@ -162,19 +163,19 @@
 
                 <div class="badge-list">
                     <div class="badge-item vvip">
-                        <img src="/assets/images/mobile/app-download/badge_vvip.svg" alt="VVIP">
+                        <img src="assets/images/mobile/app-download/badge_vvip.svg" alt="VVIP">
                     </div>
                     <div class="badge-item vip">
-                        <img src="/assets/images/mobile/app-download/badge_vip.svg" alt="VIP">
+                        <img src="assets/images/mobile/app-download/badge_vip.svg" alt="VIP">
                     </div>
                     <div class="badge-item family">
-                        <img src="/assets/images/mobile/app-download/badge_family.svg" alt="FAMILY">
+                        <img src="assets/images/mobile/app-download/badge_family.svg" alt="FAMILY">
                     </div>
                     <div class="badge-item silver">
-                        <img src="/assets/images/mobile/app-download/badge_silver.svg" alt="SILVER">
+                        <img src="assets/images/mobile/app-download/badge_silver.svg" alt="SILVER">
                     </div>
                     <div class="badge-item gold">
-                        <img src="/assets/images/mobile/app-download/badge_gold.svg" alt="GOLD">
+                        <img src="assets/images/mobile/app-download/badge_gold.svg" alt="GOLD">
                     </div>
                 </div>
 
@@ -452,12 +453,12 @@
 
         <!-- 하단 고정 버튼 (Bottom fixed buttons) -->
         <footer class="app-footer-buttons">
-            <a href="/mobile/pages/join.html" class="btn-join">회원가입</a>
-            <a href="/mobile/index.html?openAppDownload=true" class="btn-download">앱다운로드</a>
+            <a href="mobile/pages/join.html" class="btn-join">회원가입</a>
+            <a href="mobile/index.html?openAppDownload=true" class="btn-download">앱다운로드</a>
         </footer>
     </div>
 
-    <script src="/assets/js/components/mobile-footer.js"></script>
+    <script src="assets/js/components/mobile-footer.js"></script>
 
 </body>
 
