--- a/mobile/pages/approval-request.html
+++ b/mobile/pages/approval-request.html
@@ -2,11 +2,12 @@
 <html lang="ko">
 
 <head>
+    <base href="../../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>승인요청 - 이마트 에브리데이</title>
     <!-- CSS 로드 (CSS load) -->
-    <link rel="stylesheet" href="/assets/styles/mobile.css">
+    <link rel="stylesheet" href="assets/styles/mobile.css">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" as="style" crossorigin
