--- a/mobile/pages/login.html
+++ b/mobile/pages/login.html
@@ -2,11 +2,12 @@
 <html lang="ko">
 
 <head>
+    <base href="../../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>로그인 - 이마트 에브리데이</title>
     <!-- CSS 로드 (CSS load) -->
-    <link rel="stylesheet" href="/assets/styles/mobile.css">
+    <link rel="stylesheet" href="assets/styles/mobile.css">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" as="style" crossorigin
@@ -70,7 +71,7 @@
     </div>
 
     <!-- 스크립트 로드 (Scripts) -->
-    <script src="../../assets/js/components/checkbox.js"></script>
+    <script src="assets/js/components/checkbox.js"></script>
     <script>
         // 로그인 버튼 클릭 시 로그 (Log login attempt)
         document.querySelector('.btn-login').addEventListener('click', () => {
