--- a/pages/cart.html
+++ b/pages/cart.html
@@ -2,12 +2,13 @@
 <html lang="ko">
 
 <head>
+    <base href="../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>장바구니 - e-Club</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/styles/pc.css" rel="stylesheet">
+    <link href="assets/styles/pc.css" rel="stylesheet">
 </head>
 
 <body>
@@ -128,7 +129,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
@@ -254,7 +255,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
@@ -365,7 +366,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
@@ -491,7 +492,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
@@ -613,7 +614,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
@@ -740,7 +741,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
@@ -861,7 +862,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
@@ -988,7 +989,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
@@ -1107,7 +1108,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
@@ -1234,7 +1235,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
@@ -1482,17 +1483,17 @@
                         .catch(error => console.error('Error loading component:', error));
                 }
 
-                loadComponent('/components/header.component.txt', 'header-placeholder');
-                loadComponent('/components/footer.component.txt', 'footer-placeholder');
+                loadComponent('components/header.component.txt', 'header-placeholder');
+                loadComponent('components/footer.component.txt', 'footer-placeholder');
             </script>
 
         </div>
     </main>
 
-    <script src="/assets/js/components/favorites.js"></script>
-    <script src="/assets/js/components/quantity-control.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/components/checkbox.js"></script>
+    <script src="assets/js/components/favorites.js"></script>
+    <script src="assets/js/components/quantity-control.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/components/checkbox.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
