--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -2,15 +2,16 @@
 <html lang="ko">
 
 <head>
+    <base href="../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>마이페이지 - e-Club</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/styles/pc.css" rel="stylesheet">
+    <link href="assets/styles/pc.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/components/checkbox.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/components/checkbox.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
     <!-- 헤더 Placeholder -->
     <div id="header-placeholder"></div>
     <script>
-        fetch('/components/header.component.txt?v=' + new Date().getTime())
+        fetch('components/header.component.txt?v=' + new Date().getTime())
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header-placeholder').innerHTML = data;
@@ -2137,14 +2138,14 @@
     <!-- 푸터 Placeholder -->
     <div id="footer-placeholder"></div>
     <script>
-        fetch('/components/footer.component.txt')
+        fetch('components/footer.component.txt')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('footer-placeholder').innerHTML = data;
             });
     </script>
 
-    <script src="/assets/js/pages/mypage.js"></script>
+    <script src="assets/js/pages/mypage.js"></script>
 </body>
 
 </html>
