--- a/pages/search_result.html
+++ b/pages/search_result.html
@@ -2,11 +2,12 @@
 <html lang="ko">
 
 <head>
+    <base href="../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>검색결과 - e-Club</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/styles/pc.css" rel="stylesheet">
+    <link href="assets/styles/pc.css" rel="stylesheet">
 </head>
 
 <body>
@@ -231,7 +232,7 @@
                         <div class="card-checkbox">
                             <custom-checkbox class="item-check"></custom-checkbox>
                         </div>
-                        <img src="/assets/images/products/md_product_1.png" alt="Product">
+                        <img src="assets/images/products/md_product_1.png" alt="Product">
                         <div class="badge-corner">
                             <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -328,7 +329,7 @@
                         <div class="card-checkbox">
                             <custom-checkbox class="item-check"></custom-checkbox>
                         </div>
-                        <img src="/assets/images/products/md_product_2.png" alt="Product">
+                        <img src="assets/images/products/md_product_2.png" alt="Product">
                         <div class="badge-corner">
                             <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -424,7 +425,7 @@
                         <div class="card-checkbox">
                             <custom-checkbox class="item-check"></custom-checkbox>
                         </div>
-                        <img src="/assets/images/products/md_product_3.png" alt="Product">
+                        <img src="assets/images/products/md_product_3.png" alt="Product">
                         <div class="status-overlay">
                             <p>곧 입고예정</p>
                             <button class="btn-substitute">대체상품보기</button>
@@ -516,7 +517,7 @@
                         <!-- <div class="card-checkbox">
                             <custom-checkbox class="item-check"></custom-checkbox>
                         </div> -->
-                        <img src="/assets/images/products/md_product_8.png" alt="Product">
+                        <img src="assets/images/products/md_product_8.png" alt="Product">
                         <div class="status-overlay">
                             <p>품절</p>
                             <button class="btn-substitute">대체상품보기</button>
@@ -725,16 +726,16 @@
                 .catch(error => console.error('Error loading component:', error));
         }
 
-        loadComponent('/components/header.component.txt', 'header-placeholder');
-        loadComponent('/components/footer.component.txt', 'footer-placeholder');
+        loadComponent('components/header.component.txt', 'header-placeholder');
+        loadComponent('components/footer.component.txt', 'footer-placeholder');
     </script>
 
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/components/favorites.js"></script>
-    <script src="/assets/js/components/quantity-control.js"></script>
-    <script src="/assets/js/pages/search_result.js"></script>
-    <script src="/assets/js/components/view-toggle.js"></script>
-    <script src="/assets/js/components/checkbox.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/components/favorites.js"></script>
+    <script src="assets/js/components/quantity-control.js"></script>
+    <script src="assets/js/pages/search_result.js"></script>
+    <script src="assets/js/components/view-toggle.js"></script>
+    <script src="assets/js/components/checkbox.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
