--- a/mobile/pages/app-download.html
+++ b/mobile/pages/app-download.html
@@ -2,38 +2,20 @@
 <html lang="ko">
 
 <head>
-    <base href="../../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>앱 다운로드 안내 | 이마트 에브리데이 e클럽</title>
-    <!-- CSS link (Relative path to assets) -->
-    <link rel="stylesheet" href="assets/styles/mobile.css">
+    <!-- 스타일 연결 -->
+    <link rel="stylesheet" href="/assets/styles/mobile.css">
 </head>
 
 <body class="mobile-body app-download-page">
     <div class="app-download-container">
-        <!-- 상단 헤더/로고 영역 (Top header/logo area) -->
+        <!-- 상단 헤더 및 로고 -->
         <header class="app-header">
             <div class="logo-wrap">
-                <!-- SVG Logo (User provided) -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="98" height="40" viewBox="0 0 98 40" fill="none">
-                    <g clip-path="url(#clip0_318_2678)">
-                        <path
-                            d="M66.8173 18.4586V22.4815L36.8467 22.4343C35.723 22.4343 34.8213 21.5179 34.8213 20.3993V18.4114L57.4439 18.4451C57.5987 17.4006 57.7534 16.4775 57.8746 15.5071L39.2893 16.282C38.7106 16.309 38.2059 15.8845 38.1252 15.305L37.7282 12.4209L58.1101 11.9896C58.1505 11.2955 58.1505 10.6015 58.1505 9.94107L40.3188 9.91412C39.4441 9.91412 38.7375 9.19983 38.7375 8.32382V5.96533L60.1018 5.99902C61.7975 5.99902 63.1702 7.38043 63.1635 9.07854V9.17288C63.1635 11.9155 63.1568 14.8535 62.531 18.4451H66.8173V18.4586ZM43.3199 36.0866H63.3048C63.3048 36.0866 63.3317 36.0866 63.3317 36.1068V39.8737C63.3317 39.8737 63.3115 39.9007 63.2981 39.9007H42.5797C40.2179 39.9007 38.3001 37.9802 38.3069 35.6149V30.3117L58.312 30.3454V28.4114L40.1035 28.3845C39.0807 28.3845 38.2463 27.5489 38.2463 26.5179V24.5502L63.3788 24.5907L63.3654 33.9842L43.3334 33.9505V36.0799L43.3199 36.0866Z"
-                            fill="#444444" />
-                        <path
-                            d="M88.4375 23.0123C83.4581 23.7738 79.0171 23.8883 72.5371 23.8749H72.4429C70.8751 23.8749 69.61 22.5945 69.61 21.0312L69.6235 13.0123L80.5849 13.0325V10.1754L71.7162 10.1619C70.5386 10.1619 69.5898 9.20505 69.5898 8.02581V6.09859L85.6114 6.12554L85.5912 16.8331L74.6702 16.8129V19.7913C79.9524 19.7644 83.734 19.6161 88.1011 18.922L88.4443 23.0191L88.4375 23.0123ZM92.9459 26.0379H97.9657L97.9455 40.0002L79.2458 39.9665C76.4399 39.9665 74.1722 37.6821 74.1722 34.8722L74.1857 26.0042H79.2391V29.104L92.9392 29.1242V26.0312L92.9459 26.0379ZM92.9392 33.0325L79.2391 33.0123V34.542C79.2391 35.2967 79.8447 35.9099 80.5984 35.9099L92.9325 35.9301V33.0325H92.9392ZM97.9993 7.31152L97.9724 24.5757H92.8786L92.8921 15.7549H87.3744V11.6848H92.8921L92.9056 4.81152H95.5164C96.8891 4.81152 97.9994 5.93012 97.9926 7.30478L97.9993 7.31152Z"
-                            fill="#444444" />
-                        <path
-                            d="M15.4025 39.9393C4.68333 39.9393 0 33.3693 0 25.0472V16.0647C0 4.50135 7.69789 0 16.7281 0C27.629 0 32.393 5.9434 32.393 11.8868C32.393 20.5593 23.531 22.6819 19.6283 23.8208C18.5045 24.1442 14.3528 25.3841 13.4107 25.6536C9.76367 26.7116 8.71395 27.8976 8.71395 29.2385C8.71395 31.5296 10.7124 33.5243 15.4025 33.5243C19.4802 33.5243 22.4611 32.1361 22.9591 27.8706H31.4914C30.6099 34.6226 26.5591 39.9393 15.4025 39.9393ZM16.3715 6.43531C11.6276 6.43531 8.52554 9.60243 8.52554 15.0202V20.6941C8.52554 20.6941 14.9382 18.8208 17.6163 18.0121C19.857 17.3315 23.8742 15.9097 23.8742 12.3585C23.8742 9.27224 21.3711 6.43531 16.3715 6.43531Z"
-                            fill="#FDBB30" />
-                    </g>
-                    <defs>
-                        <clipPath id="clip0_318_2678">
-                            <rect width="98" height="40" fill="white" />
-                        </clipPath>
-                    </defs>
-                </svg>
+                <!-- 로고 SVG -->
+                <img src="/assets/images/common/icon_eclub_title.svg" alt="이클럽 로고">
             </div>
             <div class="title-wrap">
                 <h1 class="main-title">‘이마트에브리데이 ‘이클럽’ 주문시스템</h1>
@@ -45,20 +27,20 @@
             </div>
         </header>
 
-        <!-- 메인 목업 영역 (Main mockup area) -->
+        <!-- 메인 목업 -->
         <main class="app-content">
             <div class="mockup-wrap">
-                <img src="assets/images/mobile/app-download/iphone_mockup.png" alt="이클럽 앱 화면 목업" class="iphone-img">
+                <img src="/assets/images/mobile/app-download/iphone_mockup.png" alt="이클럽 앱 화면 목업" class="iphone-img">
             </div>
             <div class="desc-wrap">
                 <p class="desc-text">모바일웹은 운영하지 않습니다.<br>앱을 다운로드 받아주세요.</p>
             </div>
         </main>
 
-        <!-- 섹션 구분선 (Section divider) -->
+        <!-- 섹션 구분선 -->
 
 
-        <!-- Section: 소개 (Intro) -->
+        <!-- 소개 섹션 -->
         <section class="club-section club-intro-wrap">
             <div class="section-inner">
                 <h2 class="section-title">
@@ -78,7 +60,7 @@
             </div>
         </section>
 
-        <!-- Section: 가입 (Club joining method) -->
+        <!-- 장점 섹션 -->
         <section class="club-section club-method-wrap">
             <div class="section-inner">
                 <h2 class="section-title"><span class="title-in-span">장점</span></h2>
@@ -111,7 +93,7 @@
             </div>
         </section>
 
-        <!-- Section: 혜택 (Club benefits) -->
+        <!-- 혜택 섹션 -->
         <section class="club-section club-benefit-wrap">
             <div class="section-inner">
                 <h2 class="section-title"><span class="title-in-span">혜택</span></h2>
@@ -153,7 +135,7 @@
             </div>
         </section>
 
-        <!-- Section: 등급 (Club grade) -->
+        <!-- 등급 섹션 -->
         <section class="club-section club-grade-wrap">
             <div class="section-inner">
                 <h2 class="section-title"><span class="title-in-span">등급</span></h2>
@@ -163,19 +145,19 @@
 
                 <div class="badge-list">
                     <div class="badge-item vvip">
-                        <img src="assets/images/mobile/app-download/badge_vvip.svg" alt="VVIP">
+                        <img src="/assets/images/mobile/app-download/badge_vvip.svg" alt="VVIP">
                     </div>
                     <div class="badge-item vip">
-                        <img src="assets/images/mobile/app-download/badge_vip.svg" alt="VIP">
+                        <img src="/assets/images/mobile/app-download/badge_vip.svg" alt="VIP">
                     </div>
                     <div class="badge-item family">
-                        <img src="assets/images/mobile/app-download/badge_family.svg" alt="FAMILY">
+                        <img src="/assets/images/mobile/app-download/badge_family.svg" alt="FAMILY">
                     </div>
                     <div class="badge-item silver">
-                        <img src="assets/images/mobile/app-download/badge_silver.svg" alt="SILVER">
+                        <img src="/assets/images/mobile/app-download/badge_silver.svg" alt="SILVER">
                     </div>
                     <div class="badge-item gold">
-                        <img src="assets/images/mobile/app-download/badge_gold.svg" alt="GOLD">
+                        <img src="/assets/images/mobile/app-download/badge_gold.svg" alt="GOLD">
                     </div>
                 </div>
 
@@ -183,7 +165,7 @@
             </div>
         </section>
 
-        <!-- Section: 이용안내 (Club usage info) -->
+        <!-- 이용안내 섹션 -->
         <section class="club-section club-delivery-wrap">
             <div class="section-inner">
                 <h2 class="section-title"><span class="title-in-span">이용안내</span></h2>
@@ -244,7 +226,7 @@
             </div>
         </section>
 
-        <!-- Section: 전화문의 (Club call info) -->
+        <!-- 전화문의 섹션 -->
         <section class="club-section club-call-wrap">
             <div class="section-inner">
                 <h2 class="section-title">
@@ -327,27 +309,10 @@
             </div>
         </section>
 
-        <!-- 하단 푸터 및 유의사항 (Footer info) -->
+        <!-- 하단 푸터 -->
         <footer class="mobile-footer app-download">
             <div class="footer-logo">
-                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="20" viewBox="0 0 99 41" fill="none">
-                    <g clip-path="url(#clip0_38_64)">
-                        <path
-                            d="M67.0151 18.4844V22.5133L36.9571 22.4661C35.8301 22.4661 34.9258 21.5483 34.9258 20.428V18.4372L57.6144 18.471C57.7696 17.4249 57.9248 16.5004 58.0463 15.5286L39.4068 16.3047C38.8264 16.3317 38.3203 15.9065 38.2393 15.3261L37.8411 12.4378L58.2825 12.0059C58.323 11.3108 58.323 10.6157 58.323 9.95429L40.4393 9.9273C39.562 9.9273 38.8534 9.21195 38.8534 8.33464V5.97266L60.28 6.0064C61.9807 6.0064 63.3574 7.38985 63.3506 9.09048V9.18496C63.3506 11.9316 63.3439 14.874 62.7163 18.471H67.0151V18.4844ZM43.4492 36.1386H63.4923C63.4923 36.1386 63.5193 36.1386 63.5193 36.1589V39.9313C63.5193 39.9313 63.4991 39.9583 63.4856 39.9583H42.7068C40.3381 39.9583 38.4148 38.035 38.4215 35.6662V30.3551L58.4849 30.3889V28.452L40.2234 28.425C39.1976 28.425 38.3608 27.5882 38.3608 26.5557V24.5851L63.5666 24.6256L63.5531 34.0331L43.4627 33.9993V36.1319L43.4492 36.1386Z"
-                            fill="#444444"></path>
-                        <path
-                            d="M88.6976 23.0481C83.7037 23.8107 79.2496 23.9254 72.7508 23.9119H72.6563C71.0839 23.9119 69.8152 22.6297 69.8152 21.064L69.8287 13.0333L80.822 13.0535V10.1921L71.9275 10.1787C70.7465 10.1787 69.7949 9.22036 69.7949 8.03936V6.10928L85.8632 6.13628L85.8429 16.8597L74.8901 16.8395V19.8223C80.1877 19.7953 83.9803 19.6468 88.3601 18.9517L88.7043 23.0549L88.6976 23.0481ZM93.2191 26.0782H98.2535L98.2333 40.0612L79.4791 40.0274C76.6649 40.0274 74.3907 37.7397 74.3907 34.9255L74.4042 26.0445H79.4723V29.1488L93.2123 29.169V26.0715L93.2191 26.0782ZM93.2123 33.0832L79.4723 33.0629V34.5949C79.4723 35.3507 80.0797 35.9648 80.8355 35.9648L93.2056 35.9851V33.0832H93.2123ZM98.2873 7.32402L98.2603 24.6138H93.1516L93.1651 15.7799H87.6313V11.7038H93.1651L93.1786 4.82031H95.797C97.1737 4.82031 98.2873 5.94057 98.2805 7.31727L98.2873 7.32402Z"
-                            fill="#444444"></path>
-                        <path
-                            d="M15.4494 39.9986C4.69894 39.9986 0.00195312 33.4188 0.00195312 25.0843V16.0885C0.00195312 4.50802 7.72228 0 16.7788 0C27.7115 0 32.4894 5.95221 32.4894 11.9044C32.4894 20.5898 23.6016 22.7156 19.6874 23.8561C18.5604 24.18 14.3966 25.4217 13.4518 25.6917C9.79408 26.7512 8.74131 27.9389 8.74131 29.2819C8.74131 31.5764 10.7456 33.574 15.4494 33.574C19.539 33.574 22.5286 32.1838 23.028 27.912H31.5851C30.7011 34.674 26.6384 39.9986 15.4494 39.9986ZM16.4211 6.44485C11.6634 6.44485 8.55235 9.61667 8.55235 15.0425V20.7248C8.55235 20.7248 14.9837 18.8487 17.6696 18.0388C19.9169 17.3572 23.9458 15.9333 23.9458 12.3768C23.9458 9.28599 21.4353 6.44485 16.4211 6.44485Z"
-                            fill="#FFBB33"></path>
-                    </g>
-                    <defs>
-                        <clipPath id="clip0_38_64">
-                            <rect width="98.2857" height="40.0593" fill="white"></rect>
-                        </clipPath>
-                    </defs>
-                </svg>
+                <img src="/assets/images/common/icon_eclub_title.svg" alt="이클럽 로고">
             </div>
 
             <div class="footer-links-grid">
@@ -451,14 +416,14 @@
             </div>
         </footer>
 
-        <!-- 하단 고정 버튼 (Bottom fixed buttons) -->
+        <!-- 하단 고정 버튼 -->
         <footer class="app-footer-buttons">
-            <a href="mobile/pages/join.html" class="btn-join">회원가입</a>
-            <a href="mobile/index.html?openAppDownload=true" class="btn-download">앱다운로드</a>
+            <a href="/mobile/pages/join.html" class="btn-join">회원가입</a>
+            <a href="/mobile/index.html?openAppDownload=true" class="btn-download">앱다운로드</a>
         </footer>
     </div>
 
-    <script src="assets/js/components/mobile-footer.js"></script>
+    <script src="/assets/js/components/mobile-footer.js"></script>
 
 </body>
 
