--- a/mobile/pages/join.html
+++ b/mobile/pages/join.html
@@ -2,12 +2,11 @@
 <html lang="ko">
 
 <head>
-    <base href="../../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>회원가입 - 이마트 에브리데이</title>
-    <!-- CSS 로드 (CSS load) -->
-    <link rel="stylesheet" href="assets/styles/mobile.css">
+    <!-- CSS 로드 -->
+    <link rel="stylesheet" href="/assets/styles/mobile.css">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" as="style" crossorigin
@@ -17,7 +16,7 @@
 <body class="mobile-body">
 
     <div class="join-page">
-        <!-- 헤더 (Header) -->
+        <!-- 헤더 -->
         <header class="join-header">
             <button class="btn-back" onclick="history.back()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -34,7 +33,7 @@
             <h1 class="header-title">회원가입</h1>
         </header>
 
-        <!-- 컨텐츠 (Main content) -->
+        <!-- 컨텐츠 -->
         <main class="join-container">
             <div class="join-text-box">
                 <p>① "닷컴"이란 당사가 재화 또는 용역(이하 "재화 등"이라 합니다)을 이용자에게 제공하기 위하여 컴퓨터, TV, 모바일 등 정보통신 설비를 이용하여 재화 등을 거래할 수 있도록
@@ -46,29 +45,29 @@
                 <p>3. "사업자회원"은 사업자등록번호를 보유한 개인 또는 법인 계속사업자가 당사 이용약관에 동의한 후 당사 서비스를 이용하는 자를 말합니다.</p>
             </div>
 
-            <!-- 동의 라디오 버튼 (Agreement radio buttons) -->
+            <!-- 동의 라디오 버튼 -->
             <div class="agreement-group">
                 <custom-radio name="agree" label="동의하지 않음" value="false" checked></custom-radio>
                 <custom-radio name="agree" label="동의함" value="true"></custom-radio>
             </div>
         </main>
 
-        <!-- 하단 버튼 (Footer buttons) -->
+        <!-- 하단 버튼 -->
         <footer class="join-footer-btns">
             <button class="btn-action cancel" onclick="history.back()">취소</button>
             <button class="btn-action confirm">확인</button>
         </footer>
     </div>
 
-    <!-- 스크립트 로드 (Scripts) -->
-    <script src="assets/js/components/radio.js"></script>
+    <!-- 스크립트 로드 -->
+    <script src="../../assets/js/components/radio.js"></script>
     <script>
-        // 확인 버튼 클릭 시 동작 (Confirm button logic)
+        // 확인 버튼 클릭 동작
         document.querySelector('.confirm').addEventListener('click', () => {
             const agreement = document.querySelector('custom-radio[name="agree"][checked]').getAttribute('value');
             if (agreement === 'true') {
                 alert('동의하셨습니다.');
-                // 실제 처리 로직 (Real processing)
+                // 실제 처리 로직
             } else {
                 alert('약관에 동의해 주세요.');
             }
