--- a/mobile/pages/login.html
+++ b/mobile/pages/login.html
@@ -2,13 +2,12 @@
 <html lang="ko">
 
 <head>
-    <base href="../../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>로그인 - 이마트 에브리데이</title>
-    <!-- CSS 로드 (CSS load) -->
-    <link rel="stylesheet" href="assets/styles/mobile.css">
-    <!-- Google Fonts -->
+    <!-- CSS 로드 -->
+    <link rel="stylesheet" href="/assets/styles/mobile.css">
+    <!-- 구글 폰트 -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" as="style" crossorigin
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
@@ -17,8 +16,8 @@
 <body class="mobile-body">
 
     <div class="login-page">
-        <!-- 헤더 (Header) -->
-        <header class="join-header"> <!-- join-header 스타일 재사용 (Reusing join-header styles) -->
+        <!-- 헤더 -->
+        <header class="join-header"> <!-- join-header 스타일 재사용 -->
             <button class="btn-back" onclick="history.back()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <path d="M20 11H7.83L13.42 5.41L12 4L4 12L12 20L13.41 18.59L7.83 13H20V11Z" fill="#222222" />
@@ -27,12 +26,12 @@
             <h1 class="header-title">로그인</h1>
         </header>
 
-        <!-- 컨텐츠 (Main content) -->
+        <!-- 메인 컨텐츠 -->
         <main class="login-container">
-            <!-- 타이틀 (Title) -->
+            <!-- 타이틀 -->
             <div class="login-title">이클럽 주문시스템</div>
 
-            <!-- 로그인 폼 (Login form) -->
+            <!-- 로그인 폼 -->
             <div class="login-form">
                 <div class="input-group">
                     <input type="text" placeholder="아이디" id="userId">
@@ -42,21 +41,21 @@
                 </div>
             </div>
 
-            <!-- 옵션 선택 (Login options) -->
+            <!-- 로그인 옵션 -->
             <div class="login-options">
                 <custom-checkbox label="아이디 저장" id="saveId"></custom-checkbox>
                 <custom-checkbox label="자동 로그인" id="autoLogin"></custom-checkbox>
             </div>
 
-            <!-- 로그인 버튼 (Login button) -->
+            <!-- 로그인 버튼 -->
             <button class="btn-login">로그인</button>
 
-            <!-- 비밀번호 찾기 (Find password) -->
+            <!-- 비밀번호 찾기 -->
             <div class="login-links">
                 <a href="#" class="link-find-pw">비밀번호 찾기</a>
             </div>
 
-            <!-- 안내 문구 (Notice) -->
+            <!-- 안내 문구 -->
             <div class="login-notice">
                 <span class="icon-info">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -70,10 +69,10 @@
         </main>
     </div>
 
-    <!-- 스크립트 로드 (Scripts) -->
-    <script src="assets/js/components/checkbox.js"></script>
+    <!-- 스크립트 로드 -->
+    <script src="../../assets/js/components/checkbox.js"></script>
     <script>
-        // 로그인 버튼 클릭 시 로그 (Log login attempt)
+        // 로그인 시도 로그
         document.querySelector('.btn-login').addEventListener('click', () => {
             const id = document.getElementById('userId').value;
             const pw = document.getElementById('userPw').value;
@@ -81,7 +80,7 @@
             const autoLogin = document.getElementById('autoLogin').checked;
 
             console.log('Login attempt:', { id, saveId, autoLogin });
-            // 로그인 처리 로직 추가 예정 (To be implemented)
+            // 로그인 로직 구현 예정
         });
     </script>
 </body>
