--- a/mobile/pages/search_result.html
+++ b/mobile/pages/search_result.html
@@ -2,14 +2,13 @@
 <html lang="ko">
 
 <head>
-    <base href="../../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>검색결과 - e-Club Mobile</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Mobile CSS -->
-    <link href="assets/styles/mobile.css" rel="stylesheet">
+    <link href="/assets/styles/mobile.css" rel="stylesheet">
 </head>
 
 <body class="mobile-body">
@@ -167,7 +166,7 @@
                             <div class="card-checkbox">
                                 <custom-checkbox class="item-check"></custom-checkbox>
                             </div>
-                            <img src="assets/images/products/md_product_1.png" alt="Product">
+                            <img src="/assets/images/products/md_product_1.png" alt="Product">
                             <div class="badge-corner">
                                 <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -267,7 +266,7 @@
                             <div class="card-checkbox">
                                 <custom-checkbox class="item-check"></custom-checkbox>
                             </div>
-                            <img src="assets/images/products/md_product_2.png" alt="Product">
+                            <img src="/assets/images/products/md_product_2.png" alt="Product">
                             <div class="badge-corner">
                                 <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -367,7 +366,7 @@
                             <div class="card-checkbox">
                                 <custom-checkbox class="item-check"></custom-checkbox>
                             </div>
-                            <img src="assets/images/products/md_product_3.png" alt="Product">
+                            <img src="/assets/images/products/md_product_3.png" alt="Product">
                             <div class="status-overlay">
                                 <p>곧 입고예정</p>
                                 <button class="btn-substitute">대체상품보기</button>
@@ -457,7 +456,7 @@
                     <article class="product-card state-dimmed" data-price="24900" data-sales="120"
                         data-date="2024-01-05">
                         <a href="#" class="card-thumb">
-                            <img src="assets/images/products/md_product_8.png" alt="Product">
+                            <img src="/assets/images/products/md_product_8.png" alt="Product">
                             <div class="status-overlay">
                                 <p>품절</p>
                                 <button class="btn-substitute">대체상품보기</button>
@@ -556,7 +555,7 @@
                             <div class="card-checkbox">
                                 <custom-checkbox class="item-check"></custom-checkbox>
                             </div>
-                            <img src="assets/images/products/md_product_1.png" alt="Product">
+                            <img src="/assets/images/products/md_product_1.png" alt="Product">
                             <div class="badge-corner">
                                 <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -656,7 +655,7 @@
                             <div class="card-checkbox">
                                 <custom-checkbox class="item-check"></custom-checkbox>
                             </div>
-                            <img src="assets/images/products/md_product_2.png" alt="Product">
+                            <img src="/assets/images/products/md_product_2.png" alt="Product">
                             <div class="badge-corner">
                                 <svg class="icon-smile" width="16" height="16" viewBox="0 0 16 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -756,7 +755,7 @@
                             <div class="card-checkbox">
                                 <custom-checkbox class="item-check"></custom-checkbox>
                             </div>
-                            <img src="assets/images/products/md_product_3.png" alt="Product">
+                            <img src="/assets/images/products/md_product_3.png" alt="Product">
                             <div class="status-overlay">
                                 <p>곧 입고예정</p>
                                 <button class="btn-substitute">대체상품보기</button>
@@ -850,7 +849,7 @@
                             <!-- <div class="card-checkbox">
                             <custom-checkbox class="item-check"></custom-checkbox>
                         </div> -->
-                            <img src="assets/images/products/md_product_8.png" alt="Product">
+                            <img src="/assets/images/products/md_product_8.png" alt="Product">
                             <div class="status-overlay">
                                 <p>품절</p>
                                 <button class="btn-substitute">대체상품보기</button>
@@ -963,13 +962,13 @@
     <!-- Category Filter Offcanvas Placeholder -->
     <div id="category-filter-placeholder"></div>
 
-    <script src="assets/js/components/quantity-control.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/pages/search_result.js"></script>
-    <script src="assets/js/components/mobile-footer.js"></script>
-    <script src="assets/js/components/favorites.js"></script>
+    <script src="/assets/js/components/quantity-control.js"></script>
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/pages/search_result.js"></script>
+    <script src="/assets/js/components/mobile-footer.js"></script>
+    <script src="/assets/js/components/favorites.js"></script>
 
-    <script src="assets/js/components/checkbox.js"></script>
+    <script src="/assets/js/components/checkbox.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         function loadComponent(url, placeholderId) {
@@ -1001,10 +1000,10 @@
                 .catch(error => console.error('Error loading component:', error));
         }
 
-        loadComponent('mobile/components/header.component.txt', 'mobile-header-placeholder');
-        loadComponent('mobile/components/footer.component.txt', 'mobile-footer-placeholder');
-        loadComponent('mobile/components/bottom-nav.component.txt', 'mobile-bottom-nav-placeholder');
-        loadComponent('mobile/components/category-filter.offcanvas.txt', 'category-filter-placeholder');
+        loadComponent('/mobile/components/header.component.txt', 'mobile-header-placeholder');
+        loadComponent('/mobile/components/footer.component.txt', 'mobile-footer-placeholder');
+        loadComponent('/mobile/components/bottom-nav.component.txt', 'mobile-bottom-nav-placeholder');
+        loadComponent('/mobile/components/category-filter.offcanvas.txt', 'category-filter-placeholder');
     </script>
 </body>
 
