--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -2,32 +2,18 @@
 <html lang="ko">
 
 <head>
-    <base href="../">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>마이페이지 - e-Club</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/styles/pc.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/components/checkbox.js"></script>
+    <link href="/assets/styles/pc.css" rel="stylesheet">
 </head>
 
 <body>
 
     <!-- 헤더 Placeholder -->
     <div id="header-placeholder"></div>
-    <script>
-        fetch('components/header.component.txt?v=' + new Date().getTime())
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('header-placeholder').innerHTML = data;
-                document.dispatchEvent(new Event('headerLoaded'));
-            })
-            .catch(error => console.error('Error loading header:', error));
-    </script>
-
     <main class="mypage-page">
         <div class="section-container">
 
@@ -2138,14 +2124,32 @@
     <!-- 푸터 Placeholder -->
     <div id="footer-placeholder"></div>
     <script>
-        fetch('components/footer.component.txt')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('footer-placeholder').innerHTML = data;
-            });
+        function loadComponent(url, placeholderId) {
+            fetch(url + '?v=' + new Date().getTime())
+                .then(response => {
+                    if (!response.ok) throw new Error('Network response was not ok');
+                    return response.text();
+                })
+                .then(data => {
+                    document.getElementById(placeholderId).innerHTML = data;
+                    if (placeholderId === 'header-placeholder') {
+                        document.dispatchEvent(new Event('headerLoaded'));
+                    }
+                    if (placeholderId === 'footer-placeholder') {
+                        document.dispatchEvent(new Event('footerLoaded'));
+                    }
+                })
+                .catch(error => console.error('Error loading component:', error));
+        }
+
+        loadComponent('/components/header.component.txt', 'header-placeholder');
+        loadComponent('/components/footer.component.txt', 'footer-placeholder');
     </script>
 
-    <script src="assets/js/pages/mypage.js"></script>
+    <script src="/assets/js/pages/mypage.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/components/checkbox.js"></script>
 </body>
 
 </html>
