deploy: 3f043b59e96282ea5e9e3ad42f227c636420c9fd

--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -1589,8 +1589,8 @@
                 .catch(error => console.error('Error loading component:', error));
         }
 
-        loadComponent('/components/header.component.txt', 'header-placeholder');
-        loadComponent('/components/footer.component.txt', 'footer-placeholder');
+        loadComponent('/emart/components/header.component.txt', 'header-placeholder');
+        loadComponent('/emart/components/footer.component.txt', 'footer-placeholder');
     </script>
 
     <script src="/emart/assets/js/pages/mypage.js"></script>
