--- a/index.html
+++ b/index.html
@@ -4591,8 +4591,8 @@
                     .catch(error => console.error('Error loading component:', error));
             }
 
-            loadComponent('/components/header.component.txt', 'header-placeholder');
-            loadComponent('/components/footer.component.txt', 'footer-placeholder');
+            loadComponent('/emart/components/header.component.txt', 'header-placeholder');
+            loadComponent('/emart/components/footer.component.txt', 'footer-placeholder');
         </script>
         <script src="/emart/assets/js/main.js"></script>
         <script src="/emart/assets/js/components/favorites.js"></script>
