--- a/pages/cart.html
+++ b/pages/cart.html
@@ -864,7 +864,7 @@
                         })
                         .then(data => {
                             // 하위 페이지 경로 보정
-                            if (window.location.pathname.includes('/pages/')) {
+                            if (window.location.pathname.includes('/emart/pages/')) {
                                 data = data.replace(/src="assets\//g, 'src="../assets/');
                             }
                             document.getElementById(placeholderId).innerHTML = data;
@@ -878,8 +878,8 @@
                         .catch(error => console.error('Error loading component:', error));
                 }
 
-                loadComponent('/components/header.component.txt', 'header-placeholder');
-                loadComponent('/components/footer.component.txt', 'footer-placeholder');
+                loadComponent('/emart/components/header.component.txt', 'header-placeholder');
+                loadComponent('/emart/components/footer.component.txt', 'footer-placeholder');
             </script>
 
         </div>
