--- a/mobile/pages/app-download.html
+++ b/mobile/pages/app-download.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>앱 다운로드 안내 | 이마트 에브리데이 e클럽</title>
     <!-- 스타일 연결 -->
-    <link rel="stylesheet" href="/assets/styles/mobile.css">
+    <link rel="stylesheet" href="/emart/assets/styles/mobile.css">
 </head>
 
 <body class="mobile-body app-download-page">
@@ -15,7 +15,7 @@
         <header class="app-header">
             <div class="logo-wrap">
                 <!-- 로고 SVG -->
-                <img src="/assets/images/common/icon_eclub_title.svg" alt="이클럽 로고">
+                <img src="/emart/assets/images/common/icon_eclub_title.svg" alt="이클럽 로고">
             </div>
             <div class="title-wrap">
                 <h1 class="main-title">‘이마트에브리데이 ‘이클럽’ 주문시스템</h1>
@@ -30,7 +30,7 @@
         <!-- 메인 목업 -->
         <main class="app-content">
             <div class="mockup-wrap">
-                <img src="/assets/images/mobile/app-download/iphone_mockup.png" alt="이클럽 앱 화면 목업" class="iphone-img">
+                <img src="/emart/assets/images/mobile/app-download/iphone_mockup.png" alt="이클럽 앱 화면 목업" class="iphone-img">
             </div>
             <div class="desc-wrap">
                 <p class="desc-text">모바일웹은 운영하지 않습니다.<br>앱을 다운로드 받아주세요.</p>
@@ -145,19 +145,19 @@
 
                 <div class="badge-list">
                     <div class="badge-item vvip">
-                        <img src="/assets/images/mobile/app-download/badge_vvip.svg" alt="VVIP">
+                        <img src="/emart/assets/images/mobile/app-download/badge_vvip.svg" alt="VVIP">
                     </div>
                     <div class="badge-item vip">
-                        <img src="/assets/images/mobile/app-download/badge_vip.svg" alt="VIP">
+                        <img src="/emart/assets/images/mobile/app-download/badge_vip.svg" alt="VIP">
                     </div>
                     <div class="badge-item family">
-                        <img src="/assets/images/mobile/app-download/badge_family.svg" alt="FAMILY">
+                        <img src="/emart/assets/images/mobile/app-download/badge_family.svg" alt="FAMILY">
                     </div>
                     <div class="badge-item silver">
-                        <img src="/assets/images/mobile/app-download/badge_silver.svg" alt="SILVER">
+                        <img src="/emart/assets/images/mobile/app-download/badge_silver.svg" alt="SILVER">
                     </div>
                     <div class="badge-item gold">
-                        <img src="/assets/images/mobile/app-download/badge_gold.svg" alt="GOLD">
+                        <img src="/emart/assets/images/mobile/app-download/badge_gold.svg" alt="GOLD">
                     </div>
                 </div>
 
@@ -312,7 +312,7 @@
         <!-- 하단 푸터 -->
         <footer class="mobile-footer">
             <div class="footer-logo">
-                <img src="/assets/images/common/icon_eclub_title.svg" alt="이클럽 로고">
+                <img src="/emart/assets/images/common/icon_eclub_title.svg" alt="이클럽 로고">
             </div>
 
             <div class="footer-links-grid">
@@ -372,12 +372,12 @@
 
         <!-- 하단 고정 버튼 -->
         <footer class="app-footer-buttons">
-            <a href="/mobile/pages/join.html" class="btn-join">회원가입</a>
-            <a href="/mobile/index.html?openAppDownload=true" class="btn-download">앱다운로드</a>
+            <a href="/emart/mobile/pages/join.html" class="btn-join">회원가입</a>
+            <a href="/emart/mobile/index.html?openAppDownload=true" class="btn-download">앱다운로드</a>
         </footer>
     </div>
 
-    <script src="/assets/js/components/mobile-footer.js"></script>
+    <script src="/emart/assets/js/components/mobile-footer.js"></script>
 
 </body>
 
