--- a/pages/cart.html
+++ b/pages/cart.html
@@ -7,7 +7,7 @@
     <title>장바구니 - e-Club</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/styles/pc.css" rel="stylesheet">
+    <link href="/emart/assets/styles/pc.css" rel="stylesheet">
 </head>
 
 <body>
@@ -88,7 +88,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="/emart/assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
@@ -154,7 +154,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="/emart/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
@@ -217,7 +217,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="/emart/assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
@@ -283,7 +283,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="/emart/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
@@ -357,7 +357,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="/emart/assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
@@ -424,7 +424,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="/emart/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
@@ -497,7 +497,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="/emart/assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
@@ -564,7 +564,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="/emart/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
@@ -635,7 +635,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image.png" alt="에비앙 500ml"
+                                <img src="/emart/assets/images/cart/Product Image.png" alt="에비앙 500ml"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%97%90%EB%B9%84%EC%95%99%20500ml'">
                             </div>
 
@@ -702,7 +702,7 @@
                             </div>
 
                             <div class="item-image">
-                                <img src="/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
+                                <img src="/emart/assets/images/cart/Product Image-1.png" alt="애경 엑츠"
                                     onerror="this.src='https://placehold.jp/24/f4f4f4/cccccc/150x150.png?text=%EC%95%A0%EA%B2%BD%20%EC%97%91%EC%B8%A0'">
                             </div>
 
@@ -864,7 +864,7 @@
                         })
                         .then(data => {
                             // 하위 페이지 경로 보정
-                            if (window.location.pathname.includes('/pages/')) {
+                            if (window.location.pathname.includes('/emart/pages/')) {
                                 data = data.replace(/src="assets\//g, 'src="../assets/');
                             }
                             document.getElementById(placeholderId).innerHTML = data;
@@ -878,17 +878,17 @@
                         .catch(error => console.error('Error loading component:', error));
                 }
 
-                loadComponent('/components/header.component.txt', 'header-placeholder');
-                loadComponent('/components/footer.component.txt', 'footer-placeholder');
+                loadComponent('/emart/components/header.component.txt', 'header-placeholder');
+                loadComponent('/emart/components/footer.component.txt', 'footer-placeholder');
             </script>
 
         </div>
     </main>
 
-    <script src="/assets/js/components/favorites.js"></script>
-    <script src="/assets/js/components/quantity-control.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/components/checkbox.js"></script>
+    <script src="/emart/assets/js/components/favorites.js"></script>
+    <script src="/emart/assets/js/components/quantity-control.js"></script>
+    <script src="/emart/assets/js/main.js"></script>
+    <script src="/emart/assets/js/components/checkbox.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
@@ -911,7 +911,7 @@
                         </div>
                         <div class="btn-area">
                             <button type="button" class="btn-popup btn-primary"
-                                onclick="location.href='/pages/cart.html'">네</button>
+                                onclick="location.href='/emart/pages/cart.html'">네</button>
                         </div>
                     </div>
                 </div>
