--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -7,7 +7,7 @@
     <title>마이페이지 - e-Club</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/styles/pc.css" rel="stylesheet">
+    <link href="/emart/assets/styles/pc.css" rel="stylesheet">
 </head>
 
 <body>
@@ -71,7 +71,7 @@
                             <span class="count">5</span>
                         </a>
                         <div class="v-divider"></div>
-                        <a href="/pages/cart.html" class="summary-item">
+                        <a href="/emart/pages/cart.html" class="summary-item">
                             <span class="label">장바구니</span>
                             <span class="count">69</span>
                         </a>
@@ -1589,14 +1589,14 @@
                 .catch(error => console.error('Error loading component:', error));
         }
 
-        loadComponent('/components/header.component.txt', 'header-placeholder');
-        loadComponent('/components/footer.component.txt', 'footer-placeholder');
+        loadComponent('/emart/components/header.component.txt', 'header-placeholder');
+        loadComponent('/emart/components/footer.component.txt', 'footer-placeholder');
     </script>
 
-    <script src="/assets/js/pages/mypage.js"></script>
+    <script src="/emart/assets/js/pages/mypage.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/components/checkbox.js"></script>
+    <script src="/emart/assets/js/main.js"></script>
+    <script src="/emart/assets/js/components/checkbox.js"></script>
 </body>
 
 </html>
