main.js - 분리 작업 전 commit

--- a/pages/search_result.html
+++ b/pages/search_result.html
@@ -444,6 +444,7 @@
         loadComponent('/components/footer.component.txt', 'footer-placeholder');
     </script>
 
+    <script src="/assets/js/components/toast.js"></script>
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/components/favorites.js"></script>
     <script src="/assets/js/components/quantity-control.js"></script>
