--- a/index.html
+++ b/index.html
@@ -4594,6 +4594,7 @@
             loadComponent('/components/header.component.txt', 'header-placeholder');
             loadComponent('/components/footer.component.txt', 'footer-placeholder');
         </script>
+        <script src="/assets/js/components/toast.js"></script>
         <script src="/assets/js/main.js"></script>
         <script src="/assets/js/components/favorites.js"></script>
         <script src="/assets/js/components/quantity-control.js"></script>
