--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -1595,6 +1595,7 @@
 
     <script src="/assets/js/pages/mypage.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/components/toast.js"></script>
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/components/checkbox.js"></script>
 </body>
