deploy: 3c897d99994b6d9a358b11eacb987450d26ba63d

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2790,6 +2790,7 @@
     <!-- Category Filter Offcanvas Placeholder -->
     <div id="category-filter-placeholder"></div>
 
+    <script src="/emart/assets/js/components/toast.js"></script>
     <script src="/emart/assets/js/components/quantity-control.js"></script>
     <script src="/emart/assets/js/main.js"></script>
     <script src="/emart/assets/js/components/mobile-footer.js"></script>
