--- a/pages/search_result.html
+++ b/pages/search_result.html
@@ -444,6 +444,7 @@
         loadComponent('/emart/components/footer.component.txt', 'footer-placeholder');
     </script>
 
+    <script src="/emart/assets/js/components/toast.js"></script>
     <script src="/emart/assets/js/main.js"></script>
     <script src="/emart/assets/js/components/favorites.js"></script>
     <script src="/emart/assets/js/components/quantity-control.js"></script>
