--- a/pages/cart.html
+++ b/pages/cart.html
@@ -887,6 +887,7 @@
 
     <script src="/emart/assets/js/components/favorites.js"></script>
     <script src="/emart/assets/js/components/quantity-control.js"></script>
+    <script src="/emart/assets/js/components/toast.js"></script>
     <script src="/emart/assets/js/main.js"></script>
     <script src="/emart/assets/js/components/checkbox.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
